# git-template

./: .rules  Cargo.toml  README.md
.config/: release-please-config.json  release-please-manifest.json
.github/workflows/: CD.yml  CI.yml
.zed/: settings.json
crates/git-template/: CHANGELOG.md  Cargo.toml  README.md
crates/git-template/src/: cli.rs  config.rs  editor.rs  exe.rs  lib.rs  main.rs  render.rs
crates/git-template/tests/: issue.rs
