[workspace]
resolver = "3"
members = [
    "crates/git-template",
]

[workspace.package]
edition = "2024"
publish = true
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[workspace.dependencies]
clap = { version = "4.5.60", features = ["derive"] }
clap_mangen = "0.2.31"
criterion = { version = "0.5", features = ["html_reports"] }
git2 = "0.20.4"
globset = "0.4.18"
git2_credentials = { version = "0.15.0", features = ["ui4dialoguer"] }
minijinja = "2"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
toml = "0.8"
