[package]
name = "git-template"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Create new Git repositories using other repositories as templates."

[dependencies]
clap = { workspace = true }
clap_mangen = { workspace = true }
git-vendor = { version = "0.2.0", path = "../../../git-vendor/crates/git-vendor" }
git2 = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = { workspace = true }

[lints]
workspace = true
